--- a/frontend/package.json
+++ b/frontend/package.json
@@ -45,6 +45,7 @@
   "devDependencies": {
     "autoprefixer": "^10.4.21",
     "postcss": "^8.5.3",
+    "postcss-nesting": "^13.0.1",
     "tailwindcss": "^3.3.5"
   }
 }
