--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.9.0",
+    "chart.js": "^4.4.9",
     "date-fns": "^4.1.0",
     "react": "^19.1.0",
     "react-data-grid": "^7.0.0-beta.52",
@@ -20,6 +21,7 @@
     "react-router-dom": "^7.6.0",
     "react-scripts": "5.0.1",
     "react-to-print": "^3.1.0",
+    "recharts": "^2.15.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
