--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "axios": "^1.9.0",
     "chart.js": "^4.4.9",
     "date-fns": "^4.1.0",
+    "lucide-react": "^0.511.0",
     "react": "^19.1.0",
     "react-data-grid": "^7.0.0-beta.52",
     "react-datepicker": "^8.4.0",
