--- a/backend/package.json
+++ b/backend/package.json
@@ -2,10 +2,10 @@
   "name": "backend",
   "version": "1.0.0",
   "main": "server.js",
-"scripts": {
-  "start": "node server.js",
-  "test": "cross-env NODE_ENV=test jest"
-},
+  "scripts": {
+    "start": "node server.js",
+    "test": "cross-env NODE_ENV=test jest"
+  },
   "jest": {
     "testEnvironment": "node"
   },
@@ -26,6 +26,7 @@
     "mysql2": "^3.14.1",
     "nodemailer": "^7.0.3",
     "nodemon": "^3.1.10",
+    "razorpay": "^2.9.6",
     "redis": "^5.5.6",
     "xlsx": "^0.18.5"
   },
